# Gatherer

./: .gitignore  .pre-commit-config.yaml  Gatherer.py  README.md  pyproject.toml  requirements.in  requirements.txt
src/: gatherer.py
src/arx/: arx_collect.py  arx_taxanomy.py
src/data/: 2281692a_44eb_11ee_b27e_04421a29ab6f.csv  2910ff77_1ff3_11ee_82cd_04421a29ab6f.csv  453eff07_44f2_11ee_9cec_04421a29ab6f.csv  505815ed_432a_11ee_a591_04421a29ab6f.csv  815ac0fb_432a_11ee_8451_04421a29ab6f.csv  868a129b_44ef_11ee_8ad8_04421a29ab6f.csv  88e24c22_4513_11ee_a717_04421a29ab6f.csv  d2fe9e2c_44ea_11ee_8d0a_04421a29ab6f.csv  e0c49ff2_1ff7_11ee_82b4_04421a29ab6f.csv  f10f979a_44ec_11ee_90cd_04421a29ab6f.csv
src/model/: oracle.py
tests/: test_gatherer.py
