[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
pythonpath = [
  ".","src"
]

[tool.poetry]
name = "gatherer"
version = "0.1.0"
description = "An NLP tool for QA with latest scientific research"
authors = ["edbezci <ebbezci@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arxiv = "^1.4.2"
pandas = "^1.5.2"
transformers = "^4.30"
torch = "^2.0"
langchain = "0.0.196"
accelerate = "^0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
